2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>
	* Makefile.am (src_libmingwex): Add misc/tdelete.c
	misc/tfind.c misc/tsearch.c misc/twalk.c.
	* misc/tdelete.c: New.
	* misc/tfind.c: New.
	* misc/tsearch.c: New.
	* misc/twalk.c: New.
	* Makefile.in: Regenerated.

2010-01-04  Ozkan Sezer  <sezeroz@gmail.com>

	* configure.ac (--enable-wildcard): New configure time option in
	order to enable command line globbing by default.
	(__ENABLE_GLOBBING): New config.h macro, 0 or -1.
	* crt/wildcard.c: Updated to use the new __ENABLE_GLOBBING macro.
	* crt/CRT_noglob.c: New file with _dowildcard set as 0.
	* Makefile.am: Added crt/CRT_noglob.c to the build.
	* configure: Regenerated.
	* config.h.in: Regenerated.
	* Makefile.in: Regenerated.
