@@ -103,7 +103,6 @@ _topendir (const _TCHAR *szPath)
   nd->dd_dir.d_ino = 0;
   nd->dd_dir.d_reclen = 0;
   nd->dd_dir.d_namlen = 0;
-  nd->dd_dir.d_name = nd->dd_dta.name;
   memset (nd->dd_dir.d_name,0,FILENAME_MAX);
 
   return nd;
