@@ -3,14 +3,12 @@
  * This file is part of the w64 mingw-runtime package.
  * No warranty is given; refer to the file DISCLAIMER within this package.
  */
+
 /* All the headers include this file. */
 #include <_mingw.h>
 
-#ifndef	__STRICT_ANSI__
-
 #ifndef _DIRENT_H_
 #define _DIRENT_H_
-
 
 #pragma pack(push,_CRT_PACKING)
 
@@ -27,9 +25,7 @@ extern "C" {
     long		d_ino;		/* Always zero. */
     unsigned short	d_reclen;	/* Always zero. */
     unsigned short	d_namlen;	/* Length of name in d_name. */
-    char*		d_name;		/* File name. */
-    /* NOTE: The name in the dirent structure points to the name in the
-    *       finddata_t structure in the DIR. */
+    char		d_name[260]; /* [FILENAME_MAX] */ /* File name. */
   };
 
   /*
@@ -62,12 +58,12 @@ extern "C" {
     char			dd_name[1];
   } DIR;
 
-  DIR* __cdecl opendir (const char*);
-  struct dirent* __cdecl readdir (DIR*);
-  int __cdecl closedir (DIR*);
-  void __cdecl rewinddir (DIR*);
-  long __cdecl telldir (DIR*);
-  void __cdecl seekdir (DIR*, long);
+  DIR* __cdecl __MINGW_NOTHROW opendir (const char*);
+  struct dirent* __cdecl __MINGW_NOTHROW readdir (DIR*);
+  int __cdecl __MINGW_NOTHROW closedir (DIR*);
+  void __cdecl __MINGW_NOTHROW rewinddir (DIR*);
+  long __cdecl __MINGW_NOTHROW telldir (DIR*);
+  void __cdecl __MINGW_NOTHROW seekdir (DIR*, long);
 
 
   /* wide char versions */
@@ -77,8 +73,7 @@ extern "C" {
     long		d_ino;		/* Always zero. */
     unsigned short	d_reclen;	/* Always zero. */
     unsigned short	d_namlen;	/* Length of name in d_name. */
-    wchar_t*	d_name;		/* File name. */
-    /* NOTE: The name in the dirent structure points to the name in the	 *       wfinddata_t structure in the _WDIR. */
+    wchar_t		d_name[260]; /* [FILENAME_MAX] */ /* File name. */
   };
 
   /*
@@ -112,12 +107,12 @@ extern "C" {
 
 
 
-  _WDIR* __cdecl _wopendir (const wchar_t*);
-  struct _wdirent*  __cdecl _wreaddir (_WDIR*);
-  int __cdecl _wclosedir (_WDIR*);
-  void __cdecl _wrewinddir (_WDIR*);
-  long __cdecl _wtelldir (_WDIR*);
-  void __cdecl _wseekdir (_WDIR*, long);
+  _WDIR* __cdecl __MINGW_NOTHROW _wopendir (const wchar_t*);
+  struct _wdirent*  __cdecl __MINGW_NOTHROW _wreaddir (_WDIR*);
+  int __cdecl __MINGW_NOTHROW _wclosedir (_WDIR*);
+  void __cdecl __MINGW_NOTHROW _wrewinddir (_WDIR*);
+  long __cdecl __MINGW_NOTHROW _wtelldir (_WDIR*);
+  void __cdecl __MINGW_NOTHROW _wseekdir (_WDIR*, long);
 
 
 #ifdef	__cplusplus
@@ -129,7 +124,4 @@ extern "C" {
 #pragma pack(pop)
 
 #endif	/* Not _DIRENT_H_ */
-
-
-#endif	/* Not __STRICT_ANSI__ */
 
