@@ -1,3 +1,11 @@
+2010-01-12  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* mingw-w64-headers/dirent.h: synchronized with the mingw.org
+	version for correct operation with mingw-3.1x version requirements.
+	* mingw-w64-crt/misc/dirent.c: reverted revision 76 change for bug
+	#1801043, not valid any longer. (do we manually need to copy that
+	field???)
+
 2010-01-04  Roland Schwingel  <roland.schwingel@onevision.com>
 
 	* include/winternal.h (SYSTEM_HANDLE_INFORMATION): New
